examples/errors/syntax_error.zirc
fun test()
    show("missing end keyword")